--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@novnc/novnc",
+  "name": "@erikh/novnc",
   "version": "1.0.0-testing.2",
   "description": "An HTML5 VNC client",
   "directories": {
@@ -12,7 +12,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/novnc/noVNC.git"
+    "url": "git+https://github.com/erikh/noVNC.git"
   },
   "author": "Joel Martin <github@martintribe.org> (https://github.com/kanaka)",
   "contributors": [
